added ban user functionality

--- a/translations/flash_messages_translate.bg.yaml
+++ b/translations/flash_messages_translate.bg.yaml
@@ -68,3 +68,4 @@ access_denied:
 auth:
   user_not_found: "Потребителят не беше намерен."
   email_not_verified: "Трябва да потвърдите имейла си, преди да влезете."
+  user_banned: "Вашият акаунт е блокиран. Моля, свържете се с администратора."
